[project]
name = "comfyui_api_manager"
description = "This package provides three custom nodes designed to streamline workflows involving API requests, dynamic text manipulation based on API responses, and image posting to APIs. These nodes are particularly useful for automating interactions with APIs, enhancing text-based workflows with dynamic data, and facilitating image uploads."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/CC-BryanOttho/ComfyUI_API_Manager"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_API_Manager"
Icon = ""
